add notes about music config and v1.0.3 changes

--- a/site/gallery/index.html
+++ b/site/gallery/index.html
@@ -696,8 +696,8 @@
 </details>
 <div class="admonition warning">
 <p class="admonition-title">Automatic Gallery Tab Hiding</p>
-<p>If the gallery array is empty ([ ]), the Gallery tab will not be rendered on the loading screen.
-This allows you to disable the gallery feature entirely by removing or omitting all image entries.</p>
+<p>The gallery tab is automatically hidden if the gallery array is empty ([ ]) or omitted entirely from the config.
+To disable the gallery feature, simply remove the gallery entry or ensure the array contains no images.</p>
 </div>
 <hr />
 
